# aoc24

./: CMakeLists.txt  README.md
day1/: CMakeLists.txt  day1.cc  main.cc  makelist.py
day10/: CMakeLists.txt  day10-part1.cc  day10-part2.cc
day11/: CMakeLists.txt  day11-part1.cc  day11-part2.cc
day12/: CMakeLists.txt  day12-part1.cc
day13/: CMakeLists.txt  day13-part1.cc
day2/: CMakeLists.txt  day2-part1.cc  day2-part2.cc  part1.cc  part2.cc
day3/: CMakeLists.txt  day3-part1.cc  day3-part2.cc
day4/: CMakeLists.txt  day4-part1.cc  day4-part2.cc
day5/: CMakeLists.txt  day5-part1.cc  day5-part2.cc
day6/: CMakeLists.txt  day6-part1.cc  day6-part2.cc
day7/: CMakeLists.txt  day7-part1.cc  day7-part2.cc
day8/: CMakeLists.txt  day8-part1.cc  day8-part2.cc
day9/: CMakeLists.txt  day9-part1.cc  day9-part2.cc
